Changes since CEXP-1.5
 2007/10/16:
 - more recent gcc/gas use ELF section 'COMDAT' groups for 'linkonce'
   (rather than 'gnu.linkonce.xxx' sections).
   We now handle these (and do not re-load such groups anymore).
   Section symbols of group members now point to the instance first
   loaded.
   Note that prior to this change, 'linkonce groups' were loaded
   multiple times (but relocs always used the first instance, i.e.,
   we wasted memory but incurred no real problem).
   The old behavior for sections named '.gnu.linkonce.xxx' is still
   supported.
 2007/10/08:
 - added --with-newlib, --disable-multilib to configure options
   (when using top-level Makefile)
 2007/10/08:
 - replaced autoconf check which defined NO_THREAD_PROTECTION by
   simple #ifdef __rtems__ test.
 2007/10/08:
 - cache some more BFD info for the disassembler to make binutils-2.18
   work.
 2007/10/08:
 - libtecla 'install' failed to create man3, man4, ... subdirs.
 - add '-static' compiler flag when building the demo with gcc
 2007/2/14:
 - ported libtecla-1.6.1
 2005/12/16:
 - Bugfix: unary '-' operator on 'double' numbers scrambled the
   number's bit pattern (reported by Peter Dufault).
 2005/12/7:
 - Renamed 'cexp()' to 'cexpsh()' to avoid the name clash with
   POSIX cexp() (complex exponential). This is an API change -
   all applications calling 'cexp()' need to call 'cexpsh()' now.
 - Removed 'malloc()' declaration from spencer_regexp/regexp.c.
   #include <stdlib.h> instead (silenced warning).
 - Removed 80 char length limitation on string constants (was a
   parser limit). Now use a 1000 char buffer that is part of the
   parser context to assemble such strings (was 80 char buffer on
   stack).
 2005/11/5:
 - Updated README to explain how to use libcexp from a program.
 2005/11/4:
 - Created '--disable-opcodes' configure option. Updated README
   to give info about linker helper script generation with 
   xsyms -C.
 - Use clean-local: target to remove libelf local install dir.